--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
         <h2>stats & <strong>charts</strong></h2>
       </div>
       <div class="pure-u-2-5 hide-md">
-        <a href="https://bitbucket.org/kathartdk/statistics-greenland-open-source-data-visualization" target="blank"><img class="download-top btn" src="images/download_top.png"></a>
+        <a href="https://github.com/statgreen/statbank2charts" target="blank"><img class="download-top btn" src="images/download_top.png"></a>
       </div>
     </div>
     <div class="padded" id="chart-wrapper">
@@ -139,9 +139,9 @@
     <div class="pure-g download-band">
       <div class="pure-u-1 pure-u-md-1-2  padded">
         <h1>Get the <b>source code</b> here for free</h1>
-        <p> The source code is freely available for use on your site. Head over to grab your own copy at bitbucket.</p>
+        <p> The source code is freely available for use on your site. Head over to grab your own copy at github.</p>
         <br>
-        <a href="https://bitbucket.org/kathartdk/statistics-greenland-open-source-data-visualization" target="blank"><img class="download-button btn" src="images/download-large.gif"></a>
+        <a href="https://github.com/statgreen/statbank2charts" target="blank"><img class="download-button btn" src="images/download-large.gif"></a>
       </div>
       <div class="hide-md pure-u-1-5 pure-u-md-1-2  padded">
         <img src="images/paper-html.png" </div>
