--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
         <h2>DASHBOARD</h2>
         <!--Divs that will hold each control and chart-->
         <div class="choose-category-band" class="pure-u-1" id="category_picker">
-          <span>Pick data series:</span>
+          <span id="classification">Pick data series:</span>
           <div id="category_buttons"></div>
           <div id="airport_picker"></div>
         </div>
