the time variable can now be in any format e.g. Q1-Q4, 2015Q1 etc. The time-range-slider is replaced by a category filter when the time values cannot be casted to numbers.

--- a/app/index.html
+++ b/app/index.html
@@ -104,7 +104,7 @@
         <ol>
           <li><b>Time.</b>This variable is found by looking for the role "time" in the dataset, and will become the horizontal axis on the bar and line charts. Only one variable with role "time" is allowed.
           </li>
-          <li><b>Multi-classification variable.</b> This variable is used to group the data in different data series. This dimension will be the vertical axis of the charts. </li>
+          <li><b>Multi-classification variable.</b> This variable is used to group the data in different data series.</li>
           <li><b>Other variables.</b> The dataset may include additional more 1-dimensional variables.</li>
         </ol>
       </div>
