--- a/app/index.html
+++ b/app/index.html
@@ -137,7 +137,7 @@
         <a href="https://github.com/StatisticsGreenland/statbank2charts" target="blank"><img class="download-button btn" src="images/download-large.gif"></a>
       </div>
       <div class="hide-md pure-u-1-5 pure-u-md-1-2  padded">
-        <img src="images/paper-html.png" </div>
+        <img src="images/paper-html.png"> </div>
       </div>
     </div>
     <div class="pure-g testimonials-band">
